--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -26,6 +26,17 @@ body {
 	width: 100%;
 }
 
+.instructions {
+	background-color: white;
+	padding: 5px;
+	border-radius: 10px;
+	box-shadow: 3px 3px 3px #5f493d;
+	margin-bottom: 75px;
+	font-size: 17px;
+	color: #c7860f;
+	text-align: center;
+}
+
 footer {
 	text-align: center;
 	color: white;
@@ -146,6 +157,10 @@ footer {
 	font-weight:bold;
 }
 
+.angular-hook {
+	margin: 0;
+}
+
 .journal-entry {
 	width: 100%;
 }
@@ -158,13 +173,70 @@ footer {
 	width: 80%;
 	height: 80%;
 	padding: 0;
+	position: relative;
 }
 
-.entry-pic img {
+.screenshot-preview {
 	width: 100%;
 	margin-top: -75px;
 }
 
+.details-background {
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(70, 70, 70, 0.5);
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+
+.details-button {
+	position: absolute;
+	width: 60%;
+	top: 40px;
+	left: 20%;
+}
+
+.pic-details {
+	width: 100%;
+	height: 400px;
+	background-color: white;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+.screenshot {
+	margin: 5px auto;
+	width: 100%;
+	border-radius: 10px;
+}
+
+.modal-content{
+	border-radius: 5px;
+}
+
+.modal-title {
+	text-align: center;
+}
+
+.modal-title[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: #444;
+}
+
+.pic-desc {
+	width: 100%;
+	height: 150px;
+	text-align: left;
+}
+
+.pic-desc[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: #444;
+}
 
 /************************** ngAnimate ****************************/
 
